<resources>
    <string name="app_name">ElMarket</string>
    <string name="Register"> <u>Register</u></string>
    <string name="Login"> <u>Login</u></string>
    <string name="forgotPassword"> <u>Forget your password</u></string>
    <string name="create_an_account">create an account</string>
    <string name="terms_condition"><![CDATA[I Agree to The ]]> <u> <![CDATA[Terms&Condition]]> </u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="reset_password">Enter your email address we will send you a email to reset your password</string>
    <string name="resetButton">Reset</string>
    <string name="profile_save">save</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="settings">Settings</string>


    <string name="content_description">image</string>

    <string name="title_login">LOGIN</string>

    <string name="et_hint_email_id">Email ID</string>

    <string name="et_hint_password">Password</string>

    <string name="lbl_forgot_password">Forgot Password?</string>

    <string name="btn_lbl_login">Login</string>

    <string name="don_t_have_an_account">Don\'t have an account?</string>


    -
    <string name="register">

<u>Register</u>

</string>


    <string name="hint_last_name">Last name</string>

    <string name="hint_first_name">First name</string>

    <string name="et_hint_confirm_password">Confirm Password</string>


    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>

    <string name="login"><u>Login</u></string>

    <string name="please_wait">Please Wait…</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>

    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>

    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">Email sent successfully to reset your password!</string>

    <string name="register_success">You are registered successfully.</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>

    <string name="et_hint_mobile_number">Mobile Number</string>

    <string name="rb_lbl_male">MALE</string>

    <string name="rb_lbl_female">FEMALE</string>

    <string name="btn_lbl_save">Save</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>

    <string name="image_selection_failed">Image selection Failed!</string>

    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>

    <string name="msg_profile_update_success">Your profile is updated successfully.</string>

    <string name="title_activity_dashboard">MainActivity</string>

    <string name="title_dashboard">Dashboard</string>


    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="action_settings">Settings</string>

    <string name="title_settings">SETTINGS</string>

    <string name="lbl_edit">Edit</string>

    <string name="lbl_addresses">Addresses</string>
    <string name="lbl_language">Change Language</string>
    <string name="lbl_theme">Dark Mode</string>

    <string name="btn_lbl_logout">Logout</string>

    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="add_Product">Add Product</string>
    <string name="noproducts">you did\'t add any Products yet.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_details">product Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="title_my_cart">My Cart</string>
    <string name="no_cart_item_found">No items founded</string>
    <string name="lbl_subtotal">sub Totla</string>
    <string name="lbl_shipping_charge">shipping charge</string>
    <string name="lbl_total_amount">Total amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="out_of_stock">out of stock</string>
    <string name="add_address">Add Address</string>
    <string name="my_addresses">My Addresses</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="zipcode">zipCode</string>
    <string name="additional_note">Additional Note</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="other_note">Other Note</string>
    <string name="save_address">Save Address</string>
    <string name="update_address">Update Address</string>
    <string name="select_address">Select Address</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No Orders Placed Yet</string>



    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
</resources>