<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ui.activities.SettingsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <FrameLayout
            android:id="@+id/fl_header_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp">

            <ImageView
                android:id="@+id/iv_header_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/background" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_settings_activity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/title_settings"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>

        </FrameLayout>


        <FrameLayout
            android:id="@+id/fl_user_image"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_below="@id/fl_header_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-65dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                android:backgroundTint="@null"
                android:background="@drawable/image_border"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/default_profile_image" />


        </FrameLayout>

        <com.a7medkenawy.elmarket.utils.customviews.CustomTextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_header_bg"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/signin_background"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/lbl_edit"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_user_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            tools:text="Ahmed Kenawy" />

        <TextView
            android:id="@+id/tv_gender"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="normal"
            tools:text="Male" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            tools:text="a7medsa3dkenawy@gmail.com" />

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            tools:text="123456789" />


        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_mobile_number"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/signin_background"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.a7medkenawy.elmarket.utils.customviews.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:text="@string/lbl_addresses"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_vector_chevron_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_address"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/signin_background"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.a7medkenawy.elmarket.utils.customviews.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:text="@string/lbl_language"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_vector_chevron_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_Theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_language"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/signin_background"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.a7medkenawy.elmarket.utils.customviews.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:text="@string/lbl_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_vector_chevron_right" />

        </LinearLayout>

        <com.a7medkenawy.elmarket.utils.customviews.CustomButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/ll_Theme"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/btn_lbl_logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>